<resources>
    <string name="app_name">BarterCommerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">\n</string>
    <string name="default_web_client_id">YOUR_CLIENT_ID_HERE</string>
    <string name="select_category" />
    <string name="select_condition" />
    <string name="user_not_authenticated" />
    <string name="enter_product_name" />
    <string name="enter_description" />
    <string name="select_category_toast">\n</string>
    <string name="select_condition_toast" />
    <string name="enter_your_name">\n</string>
    <string name="enter_your_email" />
    <string name="invalid_email_format">\n</string>
    <string name="enter_phone_number" />
    <string name="select_image" />
    <string name="invalid_availability">\n</string>
    <string name="uploading_item" />
    <string name="item_uploaded_successfully" />
    <string name="upload_failed">\n</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="bidder_prefix">by %s</string>             <!-- Used for userIdText -->
    <string name="total_points_format">Total Points: %d</string> <!-- Used for pointsText -->
    <string name="fair_count_format">Fair: %d</string>       <!-- Used for fairCountText -->
    <string name="good_count_format">Good: %d</string>       <!-- Used for goodCountText -->
    <string name="best_count_format">Best: %d</string>       <!-- Used for bestCountText -->

    <!-- Strings used in the layout XML for buttons -->
    <string name="fair_1_point">Fair (+1)</string>
    <string name="good_2_points">Good (+2)</string>
    <string name="best_3_points">Best (+3)</string>

    <!-- String used in layout XML for content description -->
    <string name="bid_item_image">Bid item image</string>

    <string name="bids_received">Bids Received:</string>


    <string name="product_image_desc">Product Image</string>
    <string name="product_condition_text">New</string>
    <string name="product_name_text">Product Name</string>
    <string name="like_button_desc">Like Button</string>


    <!--    //ItemList-->
    <string name="no_items_found">No items found.</string>
    <string name="confirm_rejection_title">Confirm Removal</string>
    <string name="confirm_rejection_message">Are you sure you want to remove \'%1$s\'?</string> <!-- %1$s is for item name -->
    <string name="rejected">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="rejecting_item_toast">Removing %1$s…</string>
    <string name="item_removed_success">Item removed successfully.</string> <!-- If using ViewModel feedback -->
    <string name="item_remove_failed">Failed to remove item.</string> <!-- If using ViewModel feedback -->

    <string name="change_password_instructions">Enter your current password to verify, then set a new one.</string>


    <string name="back_button_desc">Back</string>
    <string name="toggle_description_desc">Toggle description visibility</string>

    <!-- Button Text -->
    <string name="see_seller_button">See Seller</string>
    <string name="remove_item_button">Remove Item</string>

    <!-- You might already have these from previous steps -->

    <string name="tab_items">Items</string>
    <string name="tab_rejected">Rejected</string>
    <string name="ic_arrow_up">Arrow Up</string>


    <string name="view_bids_button">View Bids</string>
    <string name="hide_bids_button">Hide Bids</string>
    <string name="item_unavailable_button">Unavailable</string> <!-- Or "Rejected" -->
    <string name="offered_item_unavailable_text">(Unavailable) %1$s</string> <!-- %1$s is product name -->
    <string name="item_not_found">Item not found</string>
    <string name="item_fetch_error">Error loading item</string>

    <string name="tab_all_approved">All Approved</string>
    <string name="tab_all_pending">All Pending</string>

    <string name="tab_all_rejected">All Rejected</string>
    <string name="view_offer_details">View Offer Details</string>
    <string name="manage_bid">Manage Bid</string>
    <string name="offer_unavailable">OFFER UNAVAILABLE</string>
    <string name="bid_by_format">Bid by %s</string> <!-- For Bidder Name -->
    <string name="offers_x_items_format">Offers %d items</string>
    <string name="offers_item_and_more_format">Offers: %s and %d more</string>
    <string name="offers_single_item_format">Offers: %s</string>


    <string name="default_notification_channel_id">BarterCommerce_channel_id</string>


    <!-- ... other existing strings ... -->

    <!-- Dialog Titles -->
    <string name="dialog_title_rate_exchange">Rate Your Exchange</string>
    <string name="dialog_title_report_exchange">Report Exchange Problem</string>

    <!-- Switch/Checkbox Label -->
    <string name="label_file_report">File a report for this exchange?</string>

    <!-- Section Titles/Labels in Dialog -->
    <string name="label_select_positive_feedback">Select positive feedback (optional):</string>
    <string name="label_select_report_reasons">Select reason(s) for report:</string>

    <!-- EditText Hint -->
    <string name="hint_report_description">Describe the problem (optional)</string>

    <!-- Button Texts -->
    <string name="submit_rating">Submit Rating</string>
    <string name="submit_report_and_rating">Submit Report and Rating</string> <!-- Use & for '&' -->

    <!-- Toast Messages -->
    <string name="toast_please_select_rating">Please select a rating.</string>
    <string name="toast_please_select_report_reason">Please select at least one reason for the report.</string>

    <!-- You'll also need the Toast messages from the ViewModel for submission results -->
    <string name="toast_report_submitted_successfully">Report submitted successfully.</string>
    <string name="toast_rating_submitted_successfully">Rating submitted successfully.</string>
    <string name="toast_submission_failed_generic">Could not save. Please try again.</string>
    <string name="toast_error_report_id_gen">Error submitting report (ID generation failed).</string>
    <string name="toast_failed_to_update_user_stats">Failed to update user stats.</string>
    <string name="toast_failed_to_finalize_exchange">Failed to finalize exchange details.</string>

    <!-- And the FeedbackTags labels as shown previously if you populate them from strings -->
    <string name="feedback_tag_best_seller">Best Seller</string>
    <string name="feedback_tag_time_punctual">Time Punctual</string>
    <string name="feedback_tag_friendly_communication">Friendly Communication</string>
    <!-- ... and so on for all FeedbackTags ... -->


    <string name="error_could_not_load_chat">Error: Could not load chat details.</string>
    <string name="chat_currently_disabled">Chat is currently disabled.</string>
    <string name="chat_disabled_hint">Chat disabled</string>
    <string name="enter_message_hint">Enter Message</string>
    <string name="action_send">Send</string>

    <!-- Optional: For tools:text attributes in the layout if you want them translatable for previews -->
    <string name="label_user_name_placeholder">User name</string>
    <string name="label_online">Online</string>
    <string name="banner_chat_disabled_generic_preview">Chat is disabled due to user restriction.</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="admin_items_title">Items\n</string>

</resources>